--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -40,8 +42,33 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation "androidx.fragment:fragment-ktx:${versions.fragment}"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:${versions.lifecycle_version}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle_version}"
+
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${versions.lifecycle_version}"
+
+    //coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}"
+    /* coroutines support for firebase operations */
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:${versions.coroutines_play_svcs}"
+
+    // glide
+    implementation "com.github.bumptech.glide:glide:${versions.glide}"
+    kapt "com.github.bumptech.glide:compiler:${versions.glideKapt}"
 
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
+
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    implementation "de.hdodenhof:circleimageview:${versions.circle_image_view}"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
