--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.21"
+    ext.versions =[
+            'kotlin_version'        :"1.4.21",
+            'gradle'                :"4.1.1",
+            'kotlinx'               :"1.3.2",
+            'appCompat'             :"1.1.0",
+            'constraintLayout'      :"2.0.4",
+            'material'              :"1.3.0",
+            'lifecycle_version'     :"2.2.0-rc03",
+            'fragment'              :"1.3.0",
+            'glide'                 :"4.11.0",
+            'glideKapt'             :"4.11.0",
+            'coroutines'            :"1.4.1",
+            'circle_image_view'     :"3.1.0",
+            'google_services'       :"4.3.5",
+            'coroutines_play_svcs'  :"1.1.1",
+            'swiperefreshlayout'    :"1.1.0"
+    ]
     repositories {
         google()
         jcenter()
@@ -9,9 +26,6 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.5'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
